n1 try to solve button not centered
adding: content flex centered

--- a/styles/main_first.css
+++ b/styles/main_first.css
@@ -7,6 +7,14 @@ main {
   margin-top: 150px;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 .welcome-text {
   text-align: center;
   margin-bottom: 50px;
